# waveshare-genshin-midi-keyboard

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pico_sdk_import.cmake
docker/: Dockerfile
scripts/: build_docker.sh  fetch_deps.sh
src/: config.h  hid_device.c  hid_device.h  main.c  midi_host.c  midi_host.h  midi_parse.c  midi_parse.h  nkro_report.c  nkro_report.h  note_mapper.c  note_mapper.h  tusb_config.h  usb_descriptors.c
tests/: Makefile  test_midi_parse.c  test_nkro_report.c  test_note_mapper.c
